--- a/README.html
+++ b/README.html
@@ -1,5 +1,31 @@
 <html lang="ru">
 <head>
+	<title>Животные</title>
+<style type="text/css">
+header{
+ width: 100%;
+ background: #D8E3AB;
+}
+a{
+text-decoration: none;
+}
+body{
+background-color:#6aaf30;
+background-image: url("https://img1.badfon.ru/original/6000x4000/6/ce/vetka-listya-leto-zelen.jpg");
+font-size: 20px;
+margin:0;
+padding:0;
+}
+h1{
+font-size: 65px;
+}
+p{
+text-indent: 45px;
+}
+footer{
+background:gray;
+}
+</style>
 </head>
 <body>
 <header style="margin:0">
