--- a/cat.html
+++ b/cat.html
@@ -88,7 +88,7 @@ background:gray;
   <p>Коты отличные, но любят мешать своим бегом.</p>
 </div>
 <div class="container">
-  <img src="C:\Users\fgups\Desktop\колледж 18.05.22\для презентаций 18.05.2022\человек.jpg" alt="avatar"wight="150" height="90">
+  <img src="человек.jpg" alt="avatar"wight="150" height="90">
   <p><span>Жарова Валерия</span> г. Красногорск</p>
   <p>Белый грызет цветочки!</p>
   
